src/main/java/com/example/demo/Error/OpinionNotFoundException.java
package com.example.demo.Error;

public class OpinionNotFoundException extends RuntimeException{

    public OpinionNotFoundException(String message) {

        super(message);
    }
}
